<resources>
    <string name="app_name">Notatnik</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="login_button">Login</string>
    <string name="notepad">NOTEPAD</string>
    <string name="password">Password</string>
    <string name="instructions">Place your fingertip on scanner to verify your identity</string>
    <string name="cancel">Cancel</string>
</resources>
