<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/xkxtq8j"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".SetPassActivity"
    >

    <TextView
        android:id="@+id/login_title"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/notepad"
        android:textStyle="bold"
        android:textColor="@color/fontLoginBlack"
        android:textFontWeight="600"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />


    <EditText
        android:id="@+id/pass_field"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:background="@color/fontLoginWhite"
        />

</RelativeLayout>