<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/xkxtq8j"
    tools:context="com.example.notatnik.MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/notepad"
        android:textStyle="bold"
        android:textColor="@color/fontLoginBlack"
        android:textFontWeight="600"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        app:srcCompat="@drawable/baseline_fingerprint_black_48dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="46dp"
        android:text="@string/instructions"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/pass_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/password"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />


</RelativeLayout>
